--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 eframe = "0.33.3"
 egui = "0.33.3"
 sysinfo = "0.38.1"
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.62.2", features = [ "Win32_Foundation", "Win32_UI_WindowsAndMessaging",] }
